fix: Eliminate 1px gap the the right of Home nav
Resolved by setting a width.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,7 @@ beyond the screen width. */
 
 .navbar-nav .nav-link{
     padding-left: 10px;
+    width: 100px;
 }
 
 .navbar-light {
